--- a/rebar.config
+++ b/rebar.config
@@ -3,13 +3,12 @@
 %% Dependencies management
 {deps, [
 	{ranch, "0.8.5", {git, "git://github.com/extend/ranch.git", {tag, "0.8.5"}}},
-  {mongodb, ".*", {git, "git@github.com:mururu/mongodb-erlang.git", 'master'}},
-  {mongrel, "1.2.6", {git, "git@github.com:mafei198/mongrel.git", {tag, "1.2.6"}}},
   {sync, ".*", {git, "git@github.com:mafei198/sync.git", 'master'}},
   {yamerl, ".*", {git, "git@github.com:yakaz/yamerl.git", 'master'}},
   {gproc, ".*", {git, "git@github.com:uwiger/gproc.git", 'master'}},
   {lager, ".*", {git, "git@github.com:basho/lager.git", 'master'}},
-  {jsx, ".*", {git, "git@github.com:talentdeficit/jsx.git", 'master'}}
+  {jsx, ".*", {git, "git@github.com:talentdeficit/jsx.git", 'master'}},
+  {emysql, "0.3.0", {git, "git@github.com:Eonblast/Emysql.git", 'master'}}
 ]}.
 
 %% Erlang compiler options
