--- a/game_server.config
+++ b/game_server.config
@@ -1,7 +1,8 @@
 [
-    {gproc, [
-        {gproc_dist, all}
-    ]},
+   %% Uncomment following, when use global gproc
+   %% {gproc, [
+   %%     {gproc_dist, all}
+   %% ]},
 
     {lager, [
         {handlers, [
