--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,5 @@
 # MySQL.  Versions 4.1 and 5.0 are recommended.
-# 
+#
 # Install the MYSQL driver
 #   gem install mysql2
 #
@@ -12,11 +12,10 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: game_server_development
+  database: game_server_production
   pool: 5
   username: root
-  password:
-  socket: /tmp/mysql.sock
+  password: ''
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -28,8 +27,7 @@ test:
   database: game_server_test
   pool: 5
   username: root
-  password:
-  socket: /tmp/mysql.sock
+  password: ''
 
 production:
   adapter: mysql2
@@ -38,5 +36,4 @@ production:
   database: game_server_production
   pool: 5
   username: root
-  password:
-  socket: /tmp/mysql.sock
+  password: ''
