--- a/config/database.yml
+++ b/config/database.yml
@@ -29,6 +29,15 @@ test:
   username: root
   password: ''
 
+config:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: game_server_config
+  pool: 5
+  username: root
+  password: ''
+
 production:
   adapter: mysql2
   encoding: utf8
