--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
 
 %% Erlang compiler options
 {erl_opts, [
-  {src_dirs, ["src"]}
+  {src_dirs, ["src", "test"]}
 ]}.
 
 %% Enable lager for logging
