--- a/game_server.config
+++ b/game_server.config
@@ -72,7 +72,7 @@
         %% default: []
         {excluded_modules, []},
 
-        {included_apps, [game_server]},
+        %{included_apps, [game_server]},
 
         %% executable: Identify the program that you want run by the "growl" notifications
         %% valid values: auto | notifu | 'notify-send' | growlnotify | emacsclient
