--- a/rebar.config
+++ b/rebar.config
@@ -27,7 +27,8 @@
 %% Dependencies management
 {deps, [
 	{ranch, "0.8.5", {git, "git://github.com/extend/ranch.git", {tag, "0.8.5"}}},
-	{sync, ".*", {git, "git://github.com/mafei198/sync.git", 'master'}},
+	%{sync, ".*", {git, "git://github.com/mafei198/sync.git", 'master'}},
+	{sync, ".*", {git, "git://github.com/rustyio/sync.git", 'master'}},
 	{gproc, ".*", {git, "git://github.com/uwiger/gproc.git", 'master'}},
 	{lager, ".*", {git, "git://github.com/basho/lager.git", 'master'}},
 	{emysql, "0.4.1", {git, "git://github.com/Eonblast/Emysql.git", 'master'}}
