--- a/api/extension_types.yml
+++ b/api/extension_types.yml
@@ -1,3 +1,11 @@
+###########################Request Parameters###########################
+success:
+  code: integer
+  
+error:
+  code: integer
+  desc: string
+
 town:
   name: string
   position_x: integer
@@ -18,8 +26,36 @@ user:
   towns: array-town
   team: array-integer
 
+hero:
+  uuid: string
+  user_id: string
+  level: integer
+  config_id: integer
+
+heros_info:
+  heros: array-hero
+
+formation:
+  uuid: string
+  user_id: string
+  matrix: array-string
+
+###########################Request Parameters###########################
 login_params:
   udid: string
 
 public_info_params:
   user_id: string
+
+hero_info_params:
+  id: string
+
+heros_info_params:
+  user_id: string
+
+formation_info_params:
+  user_id: string
+
+formation_update_params:
+  user_id: string 
+  matrix: array-string
