--- a/api/routes.yml
+++ b/api/routes.yml
@@ -1,2 +1,9 @@
 sessions_controller#login: login_params
+
 users_controller#public_info: public_info_params
+
+heros_controller#info: hero_info_params
+heros_controller#infos: heros_info_params
+
+formations_controller#info: formation_info_params
+formations_controller#update: formation_update_params
