--- a/game_server.config
+++ b/game_server.config
@@ -28,21 +28,21 @@
    %%     {gproc_dist, all}
    %% ]},
 
-    {lager, [
-        {handlers, [
-            {lager_console_backend, [info, {lager_default_formatter, [time," [",severity,"] ", message, "\n"]}]},
-            {lager_file_backend, [
-              {file, "log/error.log"}, {level, error}, {date, "$D0"}, {count, 5},
-              {formatter, lager_default_formatter},
-              {formatter_config, [date, " ", time," [",severity,"] ",pid, " ", message, "\n"]}
-            ]},
-            {lager_file_backend, [
-              {file, "log/console.log"}, {level, error}, {date, "$D0"}, {count, 5},
-              {formatter, lager_default_formatter},
-              {formatter_config, [date, " ", time," [",severity,"] ",pid, " ", message, "\n"]}
-            ]}
-        ]}
-    ]},
+  %%{lager, [
+  %%    {handlers, [
+  %%        {lager_console_backend, [info, {lager_default_formatter, [time," [",severity,"] ", message, "\n"]}]},
+  %%        {lager_file_backend, [
+  %%          {file, "log/error.log"}, {level, error}, {date, "$D0"}, {count, 5},
+  %%          {formatter, lager_default_formatter},
+  %%          {formatter_config, [date, " ", time," [",severity,"] ",pid, " ", message, "\n"]}
+  %%        ]},
+  %%        {lager_file_backend, [
+  %%          {file, "log/console.log"}, {level, error}, {date, "$D0"}, {count, 5},
+  %%          {formatter, lager_default_formatter},
+  %%          {formatter_config, [date, " ", time," [",severity,"] ",pid, " ", message, "\n"]}
+  %%        ]}
+  %%    ]}
+  %%]},
 
     {sync,[
 
