--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: game_server_production
+  database: game_server_development
   pool: 5
   username: root
   password: ''
@@ -25,15 +25,6 @@ test:
   encoding: utf8
   reconnect: false
   database: game_server_test
-  pool: 5
-  username: root
-  password: ''
-
-config:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: game_server_config
   pool: 5
   username: root
   password: ''
