--- a/game_server.config
+++ b/game_server.config
@@ -28,33 +28,31 @@
    %%     {gproc_dist, all}
    %% ]},
 
-  %%{lager, [
-  %%    {handlers, [
-  %%        {lager_console_backend, [info, {lager_default_formatter, [time," [",severity,"] ", message, "\n"]}]},
-  %%        {lager_file_backend, [
-  %%          {file, "log/error.log"}, {level, error}, {date, "$D0"}, {count, 5},
-  %%          {formatter, lager_default_formatter},
-  %%          {formatter_config, [date, " ", time," [",severity,"] ",pid, " ", message, "\n"]}
-  %%        ]},
-  %%        {lager_file_backend, [
-  %%          {file, "log/console.log"}, {level, error}, {date, "$D0"}, {count, 5},
-  %%          {formatter, lager_default_formatter},
-  %%          {formatter_config, [date, " ", time," [",severity,"] ",pid, " ", message, "\n"]}
-  %%        ]}
-  %%    ]}
-  %%]},
+    {lager, [
+      {handlers, [
+        {lager_console_backend, info},
+        {lager_file_backend, [{file, "log/error.log"},
+                              {level, error},
+                              {date, "$D0"},
+                              {count, 7}]},
+        {lager_file_backend, [{file, "log/console.log"},
+                              {level, info},
+                              {date, "$D0"},
+                              {count, 7}]}
+      ]}
+    ]},
 
     {sync,[
 
         %% growl: Desktop notifications
         %% valid values: all | none | [success | warning | error]
         %% default: all
-        {growl, all},
+        {growl, none},
 
         %% log: Console notifications
         %% valid values: all | none | [success | warnings | errors]
         %% default: all
-        {log, all},
+        {log, skip_success},
 
         %% non_descendant: How to handle beams whose original source path is
         %% not a descendant of the current working directory.
