--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/app"]
 	path = src/app
 	url = git@115.29.14.9:/home/git/server_001.git
+[submodule "app"]
+	path = app
+	url = git@115.29.14.9:/home/git/server_001.git
