--- a/rebar.config
+++ b/rebar.config
@@ -35,7 +35,7 @@
 
 %% Erlang compiler options
 {erl_opts, [
-  {src_dirs, ["src", "test", "app"]}
+  {src_dirs, ["src", "test", "../app"]}
 ]}.
 
 %% Enable lager for logging
