--- a/rebar.config
+++ b/rebar.config
@@ -30,7 +30,8 @@
 	{sync, ".*", {git, "git://github.com/rustyio/sync.git", 'master'}},
 	{gproc, ".*", {git, "git://github.com/uwiger/gproc.git", 'master'}},
 	{lager, ".*", {git, "git://github.com/basho/lager.git", 'master'}},
-	{emysql, "0.4.1", {git, "git://github.com/Eonblast/Emysql.git", 'master'}}
+	{emysql, "0.4.1", {git, "git://github.com/Eonblast/Emysql.git", 'master'}},
+	{poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", 'master'}}
 ]}.
 
 %% Erlang compiler options
