--- a/rebar.config
+++ b/rebar.config
@@ -31,7 +31,8 @@
 	{gproc, ".*", {git, "git://github.com/uwiger/gproc.git", 'master'}},
 	{lager, ".*", {git, "git://github.com/basho/lager.git", 'master'}},
 	{emysql, "0.4.1", {git, "git://github.com/Eonblast/Emysql.git", 'master'}},
-	{poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", 'master'}}
+	{poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", 'master'}},
+	{eredis, ".*", {git, "https://github.com/wooga/eredis.git", 'master'}}
 ]}.
 
 %% Erlang compiler options
