--- a/rebar.config
+++ b/rebar.config
@@ -32,7 +32,10 @@
 	{lager, ".*", {git, "git://github.com/basho/lager.git", 'master'}},
 	{emysql, "0.4.1", {git, "git://github.com/Eonblast/Emysql.git", 'master'}},
 	{poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", 'master'}},
-	{eredis, ".*", {git, "https://github.com/wooga/eredis.git", 'master'}}
+	{eredis, ".*", {git, "https://github.com/wooga/eredis.git", 'master'}},
+	{timertask, ".*", {git, "https://github.com/mafei198/timertask.git", 'master'}},
+	{leaderboard, ".*", {git, "https://github.com/mafei198/leaderboard_erl.git", 'master'}},
+	{record_mapper, ".*", {git, "https://github.com/mafei198/record_mapper.git", 'master'}}
 ]}.
 
 %% Erlang compiler options
