--- a/rebar.config
+++ b/rebar.config
@@ -35,7 +35,8 @@
 	{eredis, ".*", {git, "https://github.com/wooga/eredis.git", 'master'}},
 	{timertask, ".*", {git, "https://github.com/mafei198/timertask.git", 'master'}},
 	{leaderboard, ".*", {git, "https://github.com/mafei198/leaderboard_erl.git", 'master'}},
-	{record_mapper, ".*", {git, "https://github.com/mafei198/record_mapper.git", 'master'}}
+	{record_mapper, ".*", {git, "https://github.com/mafei198/record_mapper.git", 'master'}},
+	{chat_server, ".*", {git, "https://github.com/mafei198/chat_server.git", 'master'}}
 ]}.
 
 %% Erlang compiler options
