--- a/rebar.config
+++ b/rebar.config
@@ -30,13 +30,14 @@
 	{sync, ".*", {git, "git://github.com/rustyio/sync.git", 'master'}},
 	{gproc, ".*", {git, "git://github.com/uwiger/gproc.git", 'master'}},
 	{lager, ".*", {git, "git://github.com/basho/lager.git", 'master'}},
-	{emysql, "0.4.1", {git, "git://github.com/Eonblast/Emysql.git", 'master'}},
 	{poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", 'master'}},
 	{eredis, ".*", {git, "https://github.com/wooga/eredis.git", 'master'}},
 	{timertask, ".*", {git, "https://github.com/mafei198/timertask.git", 'master'}},
 	{leaderboard, ".*", {git, "https://github.com/mafei198/leaderboard_erl.git", 'master'}},
 	{record_mapper, ".*", {git, "https://github.com/mafei198/record_mapper.git", 'master'}},
-	{chat_server, ".*", {git, "https://github.com/mafei198/chat_server.git", 'master'}}
+	{chat_server, ".*", {git, "https://github.com/mafei198/chat_server.git", 'master'}},
+	{db, ".*", {git, "https://github.com/mafei198/db.git", 'master'}},
+	{player_server, ".*", {git, "https://github.com/mafei198/player_server.git", 'master'}}
 ]}.
 
 %% Erlang compiler options
