--- a/game_server.config
+++ b/game_server.config
@@ -31,11 +31,11 @@
     {lager, [
       {handlers, [
         {lager_console_backend, info},
-        {lager_file_backend, [{file, "log/error.log"},
+        {lager_file_backend, [{file, "../log/error.log"},
                               {level, error},
                               {date, "$D0"},
                               {count, 7}]},
-        {lager_file_backend, [{file, "log/console.log"},
+        {lager_file_backend, [{file, "../log/console.log"},
                               {level, info},
                               {date, "$D0"},
                               {count, 7}]}
