--- a/rebar.config
+++ b/rebar.config
@@ -37,7 +37,8 @@
 	{record_mapper, ".*", {git, "https://github.com/mafei198/record_mapper.git", 'master'}},
 	{chat_server, ".*", {git, "https://github.com/mafei198/chat_server.git", 'master'}},
 	{db, ".*", {git, "https://github.com/mafei198/db.git", 'master'}},
-	{player_server, ".*", {git, "https://github.com/mafei198/player_server.git", 'master'}}
+	{player_server, ".*", {git, "https://github.com/mafei198/player_server.git", 'master'}},
+	{game_numerical, ".*", {git, "https://github.com/mafei198/game_numerical.git", 'master'}}
 ]}.
 
 %% Erlang compiler options
