--- a/rebar.config
+++ b/rebar.config
@@ -40,6 +40,7 @@
 %%    {player_server, ".*", {git, "https://github.com/mafei198/player_server.git", 'master'}},
 %%    {game_numerical, ".*", {git, "https://github.com/mafei198/game_numerical.git", 'master'}}
 %%]}.
+%% Local Dependencies management
 {deps, [
     {ranch, "0.8.5", {}},
     {sync, ".*", {}},
