--- a/rebar.config
+++ b/rebar.config
@@ -54,7 +54,8 @@
     {chat_server, ".*", {}},
     {db, ".*", {}},
     {player_server, ".*", {}},
-    {game_numerical, ".*", {}}
+    {game_numerical, ".*", {}},
+    {gen_smtp, ".*", {}}
 ]}.
 
 %% Erlang compiler options
