Add Apple Push Notification Support!

--- a/game_server.config
+++ b/game_server.config
@@ -81,5 +81,18 @@
         %% * emacsclient = Emacs notifications
         %% default: auto
         {executable, auto}
+    ]},
+
+    {apns, [
+      {apple_host, undefined},
+      {apple_port, 2195},
+      {cert_file, undefined},
+      {key_file, undefined},
+      {cert_password, undefined},
+      {timeout, 30000},
+      {feedback_port, 2196},
+      {feedback_host, undefined},
+      {feedback_timeout, 18000000}
     ]}
+    
 ].
