--- a/rebar.config
+++ b/rebar.config
@@ -55,7 +55,8 @@
     {db, ".*", {}},
     {player_server, ".*", {}},
     {game_numerical, ".*", {}},
-    {gen_smtp, ".*", {}}
+    {gen_smtp, ".*", {}},
+    {apns, ".*", {}}
 ]}.
 
 %% Erlang compiler options
