--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ app/models/config_*
 include/config_names.hrl
 include/db_config.hrl
 include/db_schema.hrl
+include/config_data_records.hrl
 Mnesia.*
