--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,9 @@ rel/game_server
 db/config_data.sql
 
 app/models/config_*
-include/config_names.hrl
 include/db_config.hrl
 include/db_schema.hrl
 include/config_data_records.hrl
+include/config_data_names.hrl
+include/db_table_names.hrl
 Mnesia.*
