--- a/rebar.config
+++ b/rebar.config
@@ -34,7 +34,6 @@
 %%    {eredis, ".*", {git, "https://github.com/wooga/eredis.git", 'master'}},
 %%    {timertask, ".*", {git, "https://github.com/mafei198/timertask.git", 'master'}},
 %%    {leaderboard, ".*", {git, "https://github.com/mafei198/leaderboard_erl.git", 'master'}},
-%%    {record_mapper, ".*", {git, "https://github.com/mafei198/record_mapper.git", 'master'}},
 %%    {chat_server, ".*", {git, "https://github.com/mafei198/chat_server.git", 'master'}},
 %%    {db, ".*", {git, "https://github.com/mafei198/db.git", 'master'}},
 %%    {player_server, ".*", {git, "https://github.com/mafei198/player_server.git", 'master'}},
@@ -50,13 +49,13 @@
     {eredis, ".*", {}},
     {timertask, ".*", {}},
     {leaderboard, ".*", {}},
-    {record_mapper, ".*", {}},
     {chat_server, ".*", {}},
     {db, ".*", {}},
     {player_server, ".*", {}},
     {game_numerical, ".*", {}},
     {gen_smtp, ".*", {}},
-    {apns, ".*", {}}
+    {apns, ".*", {}},
+    {parse_trans, ".*", {}}
 ]}.
 
 %% Erlang compiler options
