Add JSON encode, decode support; Add independent internal API support

--- a/rebar.config
+++ b/rebar.config
@@ -55,7 +55,8 @@
     {game_numerical, ".*", {}},
     {gen_smtp, ".*", {}},
     {apns, ".*", {}},
-    {parse_trans, ".*", {}}
+    {parse_trans, ".*", {}},
+    {jsx, ".*", {}}
 ]}.
 
 %% Erlang compiler options
