Add HTTP Client

--- a/rebar.config
+++ b/rebar.config
@@ -56,7 +56,8 @@
     {gen_smtp, ".*", {}},
     {apns, ".*", {}},
     {parse_trans, ".*", {}},
-    {jsx, ".*", {}}
+    {jsx, ".*", {}},
+    {ibrowse, ".*", {}}
 ]}.
 
 %% Erlang compiler options
