Include MTwist random lib

--- a/game_server.config
+++ b/game_server.config
@@ -68,7 +68,7 @@
 
         %% excluded_modules: Ignore any modules listed
         %% default: []
-        {excluded_modules, []},
+        {excluded_modules, [mtwist]},
 
         %{included_apps, [game_server]},
 
