--- a/rebar.config
+++ b/rebar.config
@@ -57,7 +57,8 @@
     {apns, ".*", {}},
     {parse_trans, ".*", {}},
     {jsx, ".*", {}},
-    {ibrowse, ".*", {}}
+    {ibrowse, ".*", {}},
+    {mtwist, ".*", {}}
 ]}.
 
 %% Erlang compiler options
