--- a/game_server.config
+++ b/game_server.config
@@ -52,7 +52,7 @@
         %% log: Console notifications
         %% valid values: all | none | [success | warnings | errors]
         %% default: all
-        {log, all},
+        {log, errors},
 
         %% non_descendant: How to handle beams whose original source path is
         %% not a descendant of the current working directory.
