--- a/game_server.config
+++ b/game_server.config
@@ -29,6 +29,8 @@
    %% ]},
 
     {lager, [
+      {error_logger_hwm, undefined},
+      {async_threshold, undefined},
       {handlers, [
         {lager_console_backend, info},
         {lager_file_backend, [{file, "../log/error.log"},
