--- a/rebar.config
+++ b/rebar.config
@@ -41,7 +41,7 @@
 %%]}.
 %% Local Dependencies management
 {deps, [
-    {ranch, "0.8.5", {}},
+    {ranch, ".*", {}},
     {sync, ".*", {}},
     {gproc, ".*", {}},
     {lager, ".*", {}},
