--- a/deps/game_numerical/rebar.config
+++ b/deps/game_numerical/rebar.config
@@ -23,5 +23,5 @@
 
 %% Dependencies management
 {deps, [
-	{db, ".*", {git, "https://github.com/mafei198/db.git", 'master'}}
+	%%{db, ".*", {git, "https://github.com/mafei198/db.git", 'master'}}
 ]}.
