--- a/template/service.config
+++ b/template/service.config
@@ -21,33 +21,21 @@
 %% OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 %% SOFTWARE.
 
--module(push_helper).
--export([push/2, push/3, 
-         send_msg/2, batch_send_msg/2]).
--include("include/db_schema.hrl").
+[
+  {game_server, [
+    % Uncomment if you want to hot update your server.
+    % {enable_hot_code_reload, true},
 
-push(UserIds, Text) ->
-    lists:foreach(fun(UserId) ->
-        player:async_wrap(UserId, fun() ->
-            User = model:find(#users{uuid = UserId}),
-            send_msg(User#users.device_token, Text)
-        end)
-    end, UserIds).
+    % Uncomment if you want to print debug log in production env.
+    % {enable_print_debug, true},
 
-push(UserIds, PushId, Values) ->
-    lists:foreach(fun(UserId) ->
-        player:async_wrap(UserId, fun() ->
-            User = model:find(#users{uuid = UserId}),
-            Text = i18n:t(config_pushes, PushId, User#users.locale, Values),
-            send_msg(User#users.device_token, Text)
-        end)
-    end, UserIds).
+    % Uncomment and replace the email addresses for receiving exception emails.
+    % {exception_mail_receivers, ["name@email.com", "name2@email.com"]}
+  ]},
 
-send_msg(undefined, _Text) -> ok;
-send_msg(DeviceToken, Text) -> 
-    apns:send_message(push, binary_to_list(DeviceToken), Text).
-
-batch_send_msg(DeviceTokens, Text) ->
-    lists:foreach(fun(DeviceToken) ->
-        apns:send_message(push, binary_to_list(DeviceToken), Text)
-    end, DeviceTokens).
+  % Uncomment if you don't want to limit logger print rate.
+  {lager, [
+    % {error_logger_hwm, undefined},
+    % {async_threshold, undefined}
+  ]}
+].
