--- a/template/app/server_engine/Gemfile
+++ b/template/app/server_engine/Gemfile
@@ -1,14 +1,14 @@
 source 'http://ruby.taobao.org'
 
-# Rails framework
 gem 'rails', '3.2.9'
-
-# Mysql database driver
 gem 'mysql2', '0.3.14'
 
 # Roo provides an interface to Open Office, Excel, and Google Spreadsheets
 # https://github.com/Empact/roo
-gem "roo", '1.13.2'
+gem 'roo', '~> 2.0.0'
 
-# Deploy App to remote servers with git-deploy
-gem 'git-deploy', '0.6.1'
+# Deploy with Capistrano
+
+group :develop do
+  gem 'git-deploy', '0.6.1'
+end
